# promo/request.go
@@ -1,0 +1,5 @@
+package promo
+
+type CreatePromoRequest struct {
+	Discount int `validate:"required" json:"discount"`
+}
